first change remote

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -1,8 +1,8 @@
 {
   "name": "continue",
-  "icon": "media/icon.png",
-  "author": "Continue Dev, Inc",
-  "version": "1.1.57",
+  "icon": "media/image_vietinbank.png",
+  "author": "VietinBank AI",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/continuedev/continue"
@@ -18,7 +18,7 @@
   "homepage": "https://continue.dev",
   "qna": "https://github.com/continuedev/continue/issues/new/choose",
   "license": "Apache-2.0",
-  "displayName": "Continue - open-source AI code assistant",
+  "displayName": "Genie Codie - open-source AI code assistant",
   "pricing": "Free",
   "description": "The leading open-source AI code assistant",
   "publisher": "Continue",
@@ -462,7 +462,7 @@
     "submenus": [
       {
         "id": "continue.continueSubMenu",
-        "label": "Continue"
+        "label": "Genie Codie"
       }
     ],
     "menus": {
@@ -595,8 +595,8 @@
       "activitybar": [
         {
           "id": "continue",
-          "title": "Continue",
-          "icon": "media/sidebar-icon.png"
+          "title": "Genie Codie",
+          "icon": "media/vietinbank-icon.png"
         }
       ],
       "panel": [
@@ -612,8 +612,8 @@
         {
           "type": "webview",
           "id": "continue.continueGUIView",
-          "name": "Continue",
-          "icon": "media/sidebar-icon.png",
+          "name": "Genie Codie",
+          "icon": "media/vietinbank-icon.png",
           "visibility": "visible"
         }
       ],
